force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>The current active Job that needs to be filled, created from the Role</description>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>