force-app/main/default/objects/Job__c/fields/Header_Header_c_Long_Text_Area_32768__c.field-meta.xml
<CustomField>
    <fullName>Header_Header_c_Long_Text_Area_32768__c</fullName>
    <label>Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>