force-app/main/default/objects/Job__c/fields/Industry_Experience__c.field-meta.xml
<CustomField>
    <fullName>Industry_Experience__c</fullName>
    <label>Industry Experience</label>
    <type>TextArea</type>
</CustomField>