force-app/main/default/objects/Job__c/fields/Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Requirements__c</fullName>
    <description>The absolute non negotiables a Candidate must have to make the cut</description>
    <label>Minimum Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>