force-app/main/default/objects/Job__c/fields/Most_Important_Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Most_Important_Tech_Stack__c</fullName>
    <description>Indicates the Candidates Tech Stack that will carry the most weighting</description>
    <label>Most Important Tech Stack</label>
    <type>TextArea</type>
</CustomField>