force-app/main/default/objects/Job__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The region this job will be based at</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pretoria</fullName>
            </value>
            <value>
                <fullName>Cape Town</fullName>
            </value>
            <value>
                <fullName>Durban</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>