force-app/main/default/objects/Job__c/fields/Tech_Stacks_We_Use__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stacks_We_Use__c</fullName>
    <label>Tech Stacks We Use</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>