force-app/main/default/objects/Job__c/fields/What_To_Expect_from_the_Recruitment_Proc__c.field-meta.xml
<CustomField>
    <fullName>What_To_Expect_from_the_Recruitment_Proc__c</fullName>
    <label>What To Expect from the Recruitment Proc</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>