force-app/main/default/objects/Job__c/fields/What_We_Need_from_You__c.field-meta.xml
<CustomField>
    <fullName>What_We_Need_from_You__c</fullName>
    <label>What We Need from You:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>