force-app/main/default/objects/Job__c/fields/What_You_ll_Be_Doing__c.field-meta.xml
<CustomField>
    <fullName>What_You_ll_Be_Doing__c</fullName>
    <label>What You&apos;ll Be Doing:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>