force-app/main/default/objects/Job__c/fields/What_You_ll_Get_from_Us__c.field-meta.xml
<CustomField>
    <fullName>What_You_ll_Get_from_Us__c</fullName>
    <label>What You&apos;ll Get from Us:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>