force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Minimum_Requirements__c</columns>
    <columns>Most_Important_Tech_Stack__c</columns>
    <columns>Region__c</columns>
    <columns>Industry_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>